# serializer version: 1
# name: TestRevenueAnalytics.test_get_revenue_for_events
  '''
  SELECT groups.key AS key,
         groups__revenue_analytics.revenue AS revenue,
         groups__revenue_analytics.revenue AS `$virt_revenue`
  FROM
    (SELECT argMax(groups.group_key, toTimeZone(groups._timestamp, 'UTC')) AS groups___key,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  LEFT JOIN
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_revenue_item.group_0_key, revenue_analytics_revenue_item.group_1_key, revenue_analytics_revenue_item.group_2_key, revenue_analytics_revenue_item.group_3_key, revenue_analytics_revenue_item.group_4_key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT toString(persons.id) AS id,
               'revenue_analytics.events.purchase' AS source_label,
               persons.created_at AS timestamp,
               persons.properties___name AS name,
               persons.properties___email AS email,
               persons.properties___phone AS phone,
               persons.properties___address AS address,
               persons.properties___metadata AS metadata,
               persons.`properties___$geoip_country_name` AS country,
               formatDateTime(toStartOfMonth(persons.created_at), '%Y-%m') AS cohort,
               NULL AS initial_coupon,
               NULL AS initial_coupon_id
        FROM
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'phone'), ''), 'null'), '^"|"$', '') AS properties___phone,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'address'), ''), 'null'), '^"|"$', '') AS properties___address,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'metadata'), ''), 'null'), '^"|"$', '') AS properties___metadata,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$geoip_country_name'), ''), 'null'), '^"|"$', '') AS `properties___$geoip_country_name`,
                  toTimeZone(person.created_at, 'UTC') AS created_at
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))
                                                          ORDER BY argMax(toTimeZone(person.created_at, 'UTC'), person.version) DESC))) SETTINGS optimize_aggregation_in_order=1) AS persons
        INNER JOIN
          (SELECT DISTINCT events__person.id AS person_id
           FROM events
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
           LEFT JOIN
             (SELECT person.id AS id
              FROM person
              WHERE equals(person.team_id, 99999)
              GROUP BY person.id
              HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))), 0)) SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
           WHERE and(equals(events.team_id, 99999), 1)) AS events ON equals(persons.id, events.person_id)
        ORDER BY persons.created_at DESC) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT toString(events.uuid) AS id,
               toString(events.uuid) AS invoice_item_id,
               'revenue_analytics.events.purchase' AS source_label,
               toTimeZone(events.timestamp, 'UTC') AS timestamp,
               timestamp AS created_at,
               0 AS is_recurring,
               NULL AS product_id,
               toString(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id)) AS customer_id,
               events.`$group_0` AS group_0_key,
               events.`$group_1` AS group_1_key,
               events.`$group_2` AS group_2_key,
               events.`$group_3` AS group_3_key,
               events.`$group_4` AS group_4_key,
               NULL AS invoice_id,
               NULL AS subscription_id,
               toString(events.`$session_id`) AS session_id,
               events.event AS event_name,
               NULL AS coupon,
               coupon AS coupon_id,
               'USD' AS original_currency,
               accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'revenue'), ''), 'null'), '^"|"$', ''), 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'USD' AS currency,
                 if(isNull('USD'), accurateCastOrNull(currency_aware_amount, 'Decimal64(10)'), if(equals('USD', 'USD'), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10)))))) AS amount
        FROM events
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
        WHERE and(equals(events.team_id, 99999), and(equals(events.event, 'purchase'), 1, isNotNull(amount)))
        ORDER BY timestamp DESC) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups__revenue_analytics ON equals(groups.groups___key, groups__revenue_analytics.group_key)
  WHERE ifNull(equals(groups.key, 'lolol0:xxx'), 0)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_get_revenue_for_schema_source_for_email_join
  '''
  SELECT groups.key AS key,
         groups__revenue_analytics.revenue AS revenue,
         groups__revenue_analytics.revenue AS `$virt_revenue`
  FROM
    (SELECT argMax(groups.group_key, toTimeZone(groups._timestamp, 'UTC')) AS groups___key,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  LEFT JOIN
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_customer__groups.key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT outer.id AS id,
               'stripe.posthog_test' AS source_label,
               parseDateTime64BestEffortOrNull(toString(outer.created), 6, 'UTC') AS timestamp,
               outer.name AS name,
               outer.email AS email,
               outer.phone AS phone,
               outer.address AS address,
               outer.metadata AS metadata,
               JSONExtractString(address, 'country') AS country,
               cohort_inner.cohort AS cohort,
               cohort_inner.initial_coupon AS initial_coupon,
               cohort_inner.initial_coupon_id AS initial_coupon_id
        FROM
          (SELECT *
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_customers/posthog_test_stripe_customer/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `name` String, `email` String, `phone` String, `address` String, `created` DateTime, `metadata` String')) AS outer
        LEFT JOIN
          (SELECT invoice.customer AS customer_id,
                  formatDateTime(toStartOfMonth(min(parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC'))), '%Y-%m') AS cohort,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'name'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'id'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon_id
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS invoice
           GROUP BY invoice.customer) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT groups.key AS key,
               key AS revenue_analytics_customer__groups___key
        FROM
          (SELECT groups.group_type_index AS index,
                  groups.group_key AS key
           FROM groups
           WHERE equals(groups.team_id, 99999)
           GROUP BY groups.group_type_index,
                    groups.group_key) AS groups) AS revenue_analytics_customer__groups ON equals(revenue_analytics_customer.email, revenue_analytics_customer__groups.revenue_analytics_customer__groups___key)
     LEFT JOIN
       (SELECT if(ifNull(greater(invoice.period_months, 1), 0), concat(ifNull(toString(invoice.invoice_item_id), ''), '_', ifNull(toString(invoice.month_index), '')), invoice.invoice_item_id) AS id,
               invoice.invoice_item_id AS invoice_item_id,
               'stripe.posthog_test' AS source_label,
               addMonths(invoice.timestamp, invoice.month_index) AS timestamp,
               invoice.created_at AS created_at,
               ifNull(notEmpty(invoice.subscription_id), 0) AS is_recurring,
               invoice.product_id AS product_id,
               invoice.customer_id AS customer_id,
               NULL AS group_0_key,
               NULL AS group_1_key,
               NULL AS group_2_key,
               NULL AS group_3_key,
               NULL AS group_4_key,
               invoice.id AS invoice_id,
               invoice.subscription_id AS subscription_id,
               NULL AS session_id,
               NULL AS event_name,
               JSONExtractString(invoice.discount, 'coupon', 'name') AS coupon,
               JSONExtractString(invoice.discount, 'coupon', 'id') AS coupon_id,
               upper(invoice.currency) AS original_currency,
               accurateCastOrNull(invoice.amount_captured, 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'GBP' AS currency,
                 divideDecimal(if(equals(original_currency, currency), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))))), accurateCastOrNull(invoice.period_months, 'Decimal64(10)')) AS amount
        FROM
          (SELECT posthog_test_stripe_invoice.id AS id,
                  parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC') AS created_at,
                  posthog_test_stripe_invoice.customer AS customer_id,
                  posthog_test_stripe_invoice.subscription AS subscription_id,
                  posthog_test_stripe_invoice.discount AS discount,
                  arrayJoin(JSONExtractArrayRaw(assumeNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(posthog_test_stripe_invoice.lines, 'data'), ''), 'null'), '^"|"$', '')))) AS data,
                  JSONExtractString(data, 'id') AS invoice_item_id,
                  JSONExtractUInt(data, 'amount') AS amount_before_discount,
                  coalesce(arraySum(arrayMap(x -> JSONExtractInt(x, 'amount'), JSONExtractArrayRaw(data, 'discount_amounts'))), 0) AS discount_amount,
                  greatest(minus(amount_before_discount, discount_amount), 0) AS amount_captured,
                  JSONExtractString(data, 'currency') AS currency,
                  JSONExtractString(data, 'price', 'product') AS product_id,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'start')) AS period_start,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'end')) AS period_end,
                  greatest(toInt16(round(divide(dateDiff('day', ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')), ifNull(period_end, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC'))), 30.44))), 1) AS period_months,
                  arrayJoin(range(0, period_months)) AS month_index,
                  ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')) AS timestamp
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS posthog_test_stripe_invoice
           WHERE posthog_test_stripe_invoice.paid) AS invoice) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups__revenue_analytics ON equals(groups.groups___key, groups__revenue_analytics.group_key)
  ORDER BY groups.key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_get_revenue_for_schema_source_for_id_join
  '''
  SELECT groups.key AS key,
         groups__revenue_analytics.revenue AS revenue
  FROM
    (SELECT argMax(groups.group_key, toTimeZone(groups._timestamp, 'UTC')) AS groups___key,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  LEFT JOIN
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_customer__groups.key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT outer.id AS id,
               'stripe.posthog_test' AS source_label,
               parseDateTime64BestEffortOrNull(toString(outer.created), 6, 'UTC') AS timestamp,
               outer.name AS name,
               outer.email AS email,
               outer.phone AS phone,
               outer.address AS address,
               outer.metadata AS metadata,
               JSONExtractString(address, 'country') AS country,
               cohort_inner.cohort AS cohort,
               cohort_inner.initial_coupon AS initial_coupon,
               cohort_inner.initial_coupon_id AS initial_coupon_id
        FROM
          (SELECT *
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_customers/posthog_test_stripe_customer/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `name` String, `email` String, `phone` String, `address` String, `created` DateTime, `metadata` String')) AS outer
        LEFT JOIN
          (SELECT invoice.customer AS customer_id,
                  formatDateTime(toStartOfMonth(min(parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC'))), '%Y-%m') AS cohort,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'name'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'id'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon_id
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS invoice
           GROUP BY invoice.customer) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT groups.key AS key,
               key AS revenue_analytics_customer__groups___key
        FROM
          (SELECT groups.group_type_index AS index,
                  groups.group_key AS key
           FROM groups
           WHERE equals(groups.team_id, 99999)
           GROUP BY groups.group_type_index,
                    groups.group_key) AS groups) AS revenue_analytics_customer__groups ON equals(revenue_analytics_customer.id, revenue_analytics_customer__groups.revenue_analytics_customer__groups___key)
     LEFT JOIN
       (SELECT if(ifNull(greater(invoice.period_months, 1), 0), concat(ifNull(toString(invoice.invoice_item_id), ''), '_', ifNull(toString(invoice.month_index), '')), invoice.invoice_item_id) AS id,
               invoice.invoice_item_id AS invoice_item_id,
               'stripe.posthog_test' AS source_label,
               addMonths(invoice.timestamp, invoice.month_index) AS timestamp,
               invoice.created_at AS created_at,
               ifNull(notEmpty(invoice.subscription_id), 0) AS is_recurring,
               invoice.product_id AS product_id,
               invoice.customer_id AS customer_id,
               NULL AS group_0_key,
               NULL AS group_1_key,
               NULL AS group_2_key,
               NULL AS group_3_key,
               NULL AS group_4_key,
               invoice.id AS invoice_id,
               invoice.subscription_id AS subscription_id,
               NULL AS session_id,
               NULL AS event_name,
               JSONExtractString(invoice.discount, 'coupon', 'name') AS coupon,
               JSONExtractString(invoice.discount, 'coupon', 'id') AS coupon_id,
               upper(invoice.currency) AS original_currency,
               accurateCastOrNull(invoice.amount_captured, 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'GBP' AS currency,
                 divideDecimal(if(equals(original_currency, currency), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))))), accurateCastOrNull(invoice.period_months, 'Decimal64(10)')) AS amount
        FROM
          (SELECT posthog_test_stripe_invoice.id AS id,
                  parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC') AS created_at,
                  posthog_test_stripe_invoice.customer AS customer_id,
                  posthog_test_stripe_invoice.subscription AS subscription_id,
                  posthog_test_stripe_invoice.discount AS discount,
                  arrayJoin(JSONExtractArrayRaw(assumeNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(posthog_test_stripe_invoice.lines, 'data'), ''), 'null'), '^"|"$', '')))) AS data,
                  JSONExtractString(data, 'id') AS invoice_item_id,
                  JSONExtractUInt(data, 'amount') AS amount_before_discount,
                  coalesce(arraySum(arrayMap(x -> JSONExtractInt(x, 'amount'), JSONExtractArrayRaw(data, 'discount_amounts'))), 0) AS discount_amount,
                  greatest(minus(amount_before_discount, discount_amount), 0) AS amount_captured,
                  JSONExtractString(data, 'currency') AS currency,
                  JSONExtractString(data, 'price', 'product') AS product_id,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'start')) AS period_start,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'end')) AS period_end,
                  greatest(toInt16(round(divide(dateDiff('day', ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')), ifNull(period_end, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC'))), 30.44))), 1) AS period_months,
                  arrayJoin(range(0, period_months)) AS month_index,
                  ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')) AS timestamp
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS posthog_test_stripe_invoice
           WHERE posthog_test_stripe_invoice.paid) AS invoice) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups__revenue_analytics ON equals(groups.groups___key, groups__revenue_analytics.group_key)
  ORDER BY groups.key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_get_revenue_for_schema_source_for_id_join.1
  '''
  SELECT groups.key AS key,
         groups__revenue_analytics.revenue AS `$virt_revenue`
  FROM
    (SELECT argMax(groups.group_key, toTimeZone(groups._timestamp, 'UTC')) AS groups___key,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  LEFT JOIN
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_customer__groups.key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT outer.id AS id,
               'stripe.posthog_test' AS source_label,
               parseDateTime64BestEffortOrNull(toString(outer.created), 6, 'UTC') AS timestamp,
               outer.name AS name,
               outer.email AS email,
               outer.phone AS phone,
               outer.address AS address,
               outer.metadata AS metadata,
               JSONExtractString(address, 'country') AS country,
               cohort_inner.cohort AS cohort,
               cohort_inner.initial_coupon AS initial_coupon,
               cohort_inner.initial_coupon_id AS initial_coupon_id
        FROM
          (SELECT *
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_customers/posthog_test_stripe_customer/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `name` String, `email` String, `phone` String, `address` String, `created` DateTime, `metadata` String')) AS outer
        LEFT JOIN
          (SELECT invoice.customer AS customer_id,
                  formatDateTime(toStartOfMonth(min(parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC'))), '%Y-%m') AS cohort,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'name'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'id'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon_id
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS invoice
           GROUP BY invoice.customer) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT groups.key AS key,
               key AS revenue_analytics_customer__groups___key
        FROM
          (SELECT groups.group_type_index AS index,
                  groups.group_key AS key
           FROM groups
           WHERE equals(groups.team_id, 99999)
           GROUP BY groups.group_type_index,
                    groups.group_key) AS groups) AS revenue_analytics_customer__groups ON equals(revenue_analytics_customer.id, revenue_analytics_customer__groups.revenue_analytics_customer__groups___key)
     LEFT JOIN
       (SELECT if(ifNull(greater(invoice.period_months, 1), 0), concat(ifNull(toString(invoice.invoice_item_id), ''), '_', ifNull(toString(invoice.month_index), '')), invoice.invoice_item_id) AS id,
               invoice.invoice_item_id AS invoice_item_id,
               'stripe.posthog_test' AS source_label,
               addMonths(invoice.timestamp, invoice.month_index) AS timestamp,
               invoice.created_at AS created_at,
               ifNull(notEmpty(invoice.subscription_id), 0) AS is_recurring,
               invoice.product_id AS product_id,
               invoice.customer_id AS customer_id,
               NULL AS group_0_key,
               NULL AS group_1_key,
               NULL AS group_2_key,
               NULL AS group_3_key,
               NULL AS group_4_key,
               invoice.id AS invoice_id,
               invoice.subscription_id AS subscription_id,
               NULL AS session_id,
               NULL AS event_name,
               JSONExtractString(invoice.discount, 'coupon', 'name') AS coupon,
               JSONExtractString(invoice.discount, 'coupon', 'id') AS coupon_id,
               upper(invoice.currency) AS original_currency,
               accurateCastOrNull(invoice.amount_captured, 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'GBP' AS currency,
                 divideDecimal(if(equals(original_currency, currency), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))))), accurateCastOrNull(invoice.period_months, 'Decimal64(10)')) AS amount
        FROM
          (SELECT posthog_test_stripe_invoice.id AS id,
                  parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC') AS created_at,
                  posthog_test_stripe_invoice.customer AS customer_id,
                  posthog_test_stripe_invoice.subscription AS subscription_id,
                  posthog_test_stripe_invoice.discount AS discount,
                  arrayJoin(JSONExtractArrayRaw(assumeNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(posthog_test_stripe_invoice.lines, 'data'), ''), 'null'), '^"|"$', '')))) AS data,
                  JSONExtractString(data, 'id') AS invoice_item_id,
                  JSONExtractUInt(data, 'amount') AS amount_before_discount,
                  coalesce(arraySum(arrayMap(x -> JSONExtractInt(x, 'amount'), JSONExtractArrayRaw(data, 'discount_amounts'))), 0) AS discount_amount,
                  greatest(minus(amount_before_discount, discount_amount), 0) AS amount_captured,
                  JSONExtractString(data, 'currency') AS currency,
                  JSONExtractString(data, 'price', 'product') AS product_id,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'start')) AS period_start,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'end')) AS period_end,
                  greatest(toInt16(round(divide(dateDiff('day', ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')), ifNull(period_end, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC'))), 30.44))), 1) AS period_months,
                  arrayJoin(range(0, period_months)) AS month_index,
                  ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')) AS timestamp
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS posthog_test_stripe_invoice
           WHERE posthog_test_stripe_invoice.paid) AS invoice) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups__revenue_analytics ON equals(groups.groups___key, groups__revenue_analytics.group_key)
  ORDER BY groups.key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_get_revenue_for_schema_source_for_metadata_join
  '''
  SELECT groups.key AS key,
         groups__revenue_analytics.revenue AS revenue,
         groups__revenue_analytics.revenue AS `$virt_revenue`
  FROM
    (SELECT argMax(groups.group_key, toTimeZone(groups._timestamp, 'UTC')) AS groups___key,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  LEFT JOIN
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_customer__groups.key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT outer.id AS id,
               'stripe.posthog_test' AS source_label,
               parseDateTime64BestEffortOrNull(toString(outer.created), 6, 'UTC') AS timestamp,
               outer.name AS name,
               outer.email AS email,
               outer.phone AS phone,
               outer.address AS address,
               outer.metadata AS metadata,
               JSONExtractString(address, 'country') AS country,
               cohort_inner.cohort AS cohort,
               cohort_inner.initial_coupon AS initial_coupon,
               cohort_inner.initial_coupon_id AS initial_coupon_id
        FROM
          (SELECT *
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_customers/posthog_test_stripe_customer/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `name` String, `email` String, `phone` String, `address` String, `created` DateTime, `metadata` String')) AS outer
        LEFT JOIN
          (SELECT invoice.customer AS customer_id,
                  formatDateTime(toStartOfMonth(min(parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC'))), '%Y-%m') AS cohort,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'name'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'id'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon_id
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS invoice
           GROUP BY invoice.customer) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT groups.key AS key,
               key AS revenue_analytics_customer__groups___key
        FROM
          (SELECT groups.group_type_index AS index,
                  groups.group_key AS key
           FROM groups
           WHERE equals(groups.team_id, 99999)
           GROUP BY groups.group_type_index,
                    groups.group_key) AS groups) AS revenue_analytics_customer__groups ON equals(JSONExtractString(revenue_analytics_customer.metadata, 'id'), revenue_analytics_customer__groups.revenue_analytics_customer__groups___key)
     LEFT JOIN
       (SELECT if(ifNull(greater(invoice.period_months, 1), 0), concat(ifNull(toString(invoice.invoice_item_id), ''), '_', ifNull(toString(invoice.month_index), '')), invoice.invoice_item_id) AS id,
               invoice.invoice_item_id AS invoice_item_id,
               'stripe.posthog_test' AS source_label,
               addMonths(invoice.timestamp, invoice.month_index) AS timestamp,
               invoice.created_at AS created_at,
               ifNull(notEmpty(invoice.subscription_id), 0) AS is_recurring,
               invoice.product_id AS product_id,
               invoice.customer_id AS customer_id,
               NULL AS group_0_key,
               NULL AS group_1_key,
               NULL AS group_2_key,
               NULL AS group_3_key,
               NULL AS group_4_key,
               invoice.id AS invoice_id,
               invoice.subscription_id AS subscription_id,
               NULL AS session_id,
               NULL AS event_name,
               JSONExtractString(invoice.discount, 'coupon', 'name') AS coupon,
               JSONExtractString(invoice.discount, 'coupon', 'id') AS coupon_id,
               upper(invoice.currency) AS original_currency,
               accurateCastOrNull(invoice.amount_captured, 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'GBP' AS currency,
                 divideDecimal(if(equals(original_currency, currency), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))))), accurateCastOrNull(invoice.period_months, 'Decimal64(10)')) AS amount
        FROM
          (SELECT posthog_test_stripe_invoice.id AS id,
                  parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC') AS created_at,
                  posthog_test_stripe_invoice.customer AS customer_id,
                  posthog_test_stripe_invoice.subscription AS subscription_id,
                  posthog_test_stripe_invoice.discount AS discount,
                  arrayJoin(JSONExtractArrayRaw(assumeNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(posthog_test_stripe_invoice.lines, 'data'), ''), 'null'), '^"|"$', '')))) AS data,
                  JSONExtractString(data, 'id') AS invoice_item_id,
                  JSONExtractUInt(data, 'amount') AS amount_before_discount,
                  coalesce(arraySum(arrayMap(x -> JSONExtractInt(x, 'amount'), JSONExtractArrayRaw(data, 'discount_amounts'))), 0) AS discount_amount,
                  greatest(minus(amount_before_discount, discount_amount), 0) AS amount_captured,
                  JSONExtractString(data, 'currency') AS currency,
                  JSONExtractString(data, 'price', 'product') AS product_id,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'start')) AS period_start,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'end')) AS period_end,
                  greatest(toInt16(round(divide(dateDiff('day', ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')), ifNull(period_end, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC'))), 30.44))), 1) AS period_months,
                  arrayJoin(range(0, period_months)) AS month_index,
                  ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')) AS timestamp
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS posthog_test_stripe_invoice
           WHERE posthog_test_stripe_invoice.paid) AS invoice) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups__revenue_analytics ON equals(groups.groups___key, groups__revenue_analytics.group_key)
  ORDER BY groups.key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_query_revenue_analytics_table_events
  '''
  SELECT groups_revenue_analytics.group_key AS group_key,
         groups_revenue_analytics.revenue AS revenue,
         groups_revenue_analytics.revenue_last_30_days AS revenue_last_30_days
  FROM
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_revenue_item.group_0_key, revenue_analytics_revenue_item.group_1_key, revenue_analytics_revenue_item.group_2_key, revenue_analytics_revenue_item.group_3_key, revenue_analytics_revenue_item.group_4_key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT toString(persons.id) AS id,
               'revenue_analytics.events.purchase' AS source_label,
               persons.created_at AS timestamp,
               persons.properties___name AS name,
               persons.properties___email AS email,
               persons.properties___phone AS phone,
               persons.properties___address AS address,
               persons.properties___metadata AS metadata,
               persons.`properties___$geoip_country_name` AS country,
               formatDateTime(toStartOfMonth(persons.created_at), '%Y-%m') AS cohort,
               NULL AS initial_coupon,
               NULL AS initial_coupon_id
        FROM
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'phone'), ''), 'null'), '^"|"$', '') AS properties___phone,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'address'), ''), 'null'), '^"|"$', '') AS properties___address,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'metadata'), ''), 'null'), '^"|"$', '') AS properties___metadata,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, '$geoip_country_name'), ''), 'null'), '^"|"$', '') AS `properties___$geoip_country_name`,
                  toTimeZone(person.created_at, 'UTC') AS created_at
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))
                                                          ORDER BY argMax(toTimeZone(person.created_at, 'UTC'), person.version) DESC))) SETTINGS optimize_aggregation_in_order=1) AS persons
        INNER JOIN
          (SELECT DISTINCT events__person.id AS person_id
           FROM events
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
           LEFT JOIN
             (SELECT person.id AS id
              FROM person
              WHERE equals(person.team_id, 99999)
              GROUP BY person.id
              HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))), 0)) SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
           WHERE and(equals(events.team_id, 99999), 1)) AS events ON equals(persons.id, events.person_id)
        ORDER BY persons.created_at DESC) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT toString(events.uuid) AS id,
               toString(events.uuid) AS invoice_item_id,
               'revenue_analytics.events.purchase' AS source_label,
               toTimeZone(events.timestamp, 'UTC') AS timestamp,
               timestamp AS created_at,
               0 AS is_recurring,
               NULL AS product_id,
               toString(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id)) AS customer_id,
               events.`$group_0` AS group_0_key,
               events.`$group_1` AS group_1_key,
               events.`$group_2` AS group_2_key,
               events.`$group_3` AS group_3_key,
               events.`$group_4` AS group_4_key,
               NULL AS invoice_id,
               NULL AS subscription_id,
               toString(events.`$session_id`) AS session_id,
               events.event AS event_name,
               NULL AS coupon,
               coupon AS coupon_id,
               'USD' AS original_currency,
               accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'revenue'), ''), 'null'), '^"|"$', ''), 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'USD' AS currency,
                 if(isNull('USD'), accurateCastOrNull(currency_aware_amount, 'Decimal64(10)'), if(equals('USD', 'USD'), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', 'USD', toDate(toTimeZone(events.timestamp, 'UTC')), toDecimal64(0, 10)))))) AS amount
        FROM events
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
        WHERE and(equals(events.team_id, 99999), and(equals(events.event, 'purchase'), 1, isNotNull(amount)))
        ORDER BY timestamp DESC) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups_revenue_analytics
  ORDER BY groups_revenue_analytics.group_key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestRevenueAnalytics.test_query_revenue_analytics_table_sources
  '''
  SELECT groups_revenue_analytics.group_key AS group_key,
         groups_revenue_analytics.revenue AS revenue,
         groups_revenue_analytics.revenue_last_30_days AS revenue_last_30_days
  FROM
    (SELECT 99999 AS team_id,
            arrayJoin([revenue_analytics_customer__groups.key]) AS group_key,
            sum(revenue_analytics_revenue_item.amount) AS revenue,
            sumIf(revenue_analytics_revenue_item.amount, greaterOrEquals(toTimeZone(revenue_analytics_revenue_item.timestamp, 'UTC'), minus(today(), toIntervalDay(30)))) AS revenue_last_30_days
     FROM
       (SELECT outer.id AS id,
               'stripe.posthog_test' AS source_label,
               parseDateTime64BestEffortOrNull(toString(outer.created), 6, 'UTC') AS timestamp,
               outer.name AS name,
               outer.email AS email,
               outer.phone AS phone,
               outer.address AS address,
               outer.metadata AS metadata,
               JSONExtractString(address, 'country') AS country,
               cohort_inner.cohort AS cohort,
               cohort_inner.initial_coupon AS initial_coupon,
               cohort_inner.initial_coupon_id AS initial_coupon_id
        FROM
          (SELECT *
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_customers/posthog_test_stripe_customer/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `name` String, `email` String, `phone` String, `address` String, `created` DateTime, `metadata` String')) AS outer
        LEFT JOIN
          (SELECT invoice.customer AS customer_id,
                  formatDateTime(toStartOfMonth(min(parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC'))), '%Y-%m') AS cohort,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'name'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon,
                  argMin(JSONExtractString(invoice.discount, 'coupon', 'id'), parseDateTime64BestEffortOrNull(toString(invoice.created), 6, 'UTC')) AS initial_coupon_id
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS invoice
           GROUP BY invoice.customer) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)) AS revenue_analytics_customer
     LEFT JOIN
       (SELECT groups.key AS key,
               key AS revenue_analytics_customer__groups___key
        FROM
          (SELECT groups.group_type_index AS index,
                  groups.group_key AS key
           FROM groups
           WHERE equals(groups.team_id, 99999)
           GROUP BY groups.group_type_index,
                    groups.group_key) AS groups) AS revenue_analytics_customer__groups ON equals(revenue_analytics_customer.email, revenue_analytics_customer__groups.revenue_analytics_customer__groups___key)
     LEFT JOIN
       (SELECT if(ifNull(greater(invoice.period_months, 1), 0), concat(ifNull(toString(invoice.invoice_item_id), ''), '_', ifNull(toString(invoice.month_index), '')), invoice.invoice_item_id) AS id,
               invoice.invoice_item_id AS invoice_item_id,
               'stripe.posthog_test' AS source_label,
               addMonths(invoice.timestamp, invoice.month_index) AS timestamp,
               invoice.created_at AS created_at,
               ifNull(notEmpty(invoice.subscription_id), 0) AS is_recurring,
               invoice.product_id AS product_id,
               invoice.customer_id AS customer_id,
               NULL AS group_0_key,
               NULL AS group_1_key,
               NULL AS group_2_key,
               NULL AS group_3_key,
               NULL AS group_4_key,
               invoice.id AS invoice_id,
               invoice.subscription_id AS subscription_id,
               NULL AS session_id,
               NULL AS event_name,
               JSONExtractString(invoice.discount, 'coupon', 'name') AS coupon,
               JSONExtractString(invoice.discount, 'coupon', 'id') AS coupon_id,
               upper(invoice.currency) AS original_currency,
               accurateCastOrNull(invoice.amount_captured, 'Decimal64(10)') AS original_amount,
               in(original_currency,
                  ['BIF', 'CLP', 'DJF', 'GNF', 'JPY', 'KMF', 'KRW', 'MGA', 'PYG', 'RWF', 'UGX', 'VND', 'VUV', 'XAF', 'XOF', 'XPF']) AS enable_currency_aware_divider,
                 if(enable_currency_aware_divider, accurateCastOrNull(1, 'Decimal64(10)'), accurateCastOrNull(100, 'Decimal64(10)')) AS currency_aware_divider,
                 divideDecimal(original_amount, currency_aware_divider) AS currency_aware_amount,
                 'GBP' AS currency,
                 divideDecimal(if(equals(original_currency, currency), toDecimal64(currency_aware_amount, 10), if(dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10)) = 0, toDecimal64(0, 10), multiplyDecimal(divideDecimal(toDecimal64(currency_aware_amount, 10), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', original_currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))), dictGetOrDefault(`posthog_test`.`exchange_rate_dict`, 'rate', currency, toDate(ifNull(timestamp, toDateTime(0, 'UTC'))), toDecimal64(0, 10))))), accurateCastOrNull(invoice.period_months, 'Decimal64(10)')) AS amount
        FROM
          (SELECT posthog_test_stripe_invoice.id AS id,
                  parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC') AS created_at,
                  posthog_test_stripe_invoice.customer AS customer_id,
                  posthog_test_stripe_invoice.subscription AS subscription_id,
                  posthog_test_stripe_invoice.discount AS discount,
                  arrayJoin(JSONExtractArrayRaw(assumeNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(posthog_test_stripe_invoice.lines, 'data'), ''), 'null'), '^"|"$', '')))) AS data,
                  JSONExtractString(data, 'id') AS invoice_item_id,
                  JSONExtractUInt(data, 'amount') AS amount_before_discount,
                  coalesce(arraySum(arrayMap(x -> JSONExtractInt(x, 'amount'), JSONExtractArrayRaw(data, 'discount_amounts'))), 0) AS discount_amount,
                  greatest(minus(amount_before_discount, discount_amount), 0) AS amount_captured,
                  JSONExtractString(data, 'currency') AS currency,
                  JSONExtractString(data, 'price', 'product') AS product_id,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'start')) AS period_start,
                  fromUnixTimestamp(JSONExtractUInt(data, 'period', 'end')) AS period_end,
                  greatest(toInt16(round(divide(dateDiff('day', ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')), ifNull(period_end, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC'))), 30.44))), 1) AS period_months,
                  arrayJoin(range(0, period_months)) AS month_index,
                  ifNull(period_start, parseDateTime64BestEffortOrNull(toString(posthog_test_stripe_invoice.created), 6, 'UTC')) AS timestamp
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.revenue_analytics.insights_query_runner.stripe_invoices/posthog_test_stripe_invoice/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `tax` Int64, `paid` UInt8, `lines` String, `total` Int64, `charge` String, `issuer` String, `number` String, `object` String, `status` String, `created` DateTime, `currency` String, `customer` String, `discount` String, `due_date` DateTime, `livemode` UInt8, `metadata` String, `subtotal` Int64, `attempted` UInt8, `discounts` String, `rendering` String, `amount_due` Int64, `amount_paid` Int64, `description` String, `invoice_pdf` String, `account_name` String, `auto_advance` UInt8, `effective_at` DateTime, `subscription` String, `attempt_count` UInt8, `automatic_tax` String, `customer_name` String, `period_end_at` DateTime, `billing_reason` String, `customer_email` String, `ending_balance` Int64, `payment_intent` String, `account_country` String, `amount_shipping` Int64, `period_start_at` DateTime, `amount_remaining` Int64, `customer_address` String, `customer_tax_ids` String, `paid_out_of_band` UInt8, `payment_settings` String, `starting_balance` Int64, `collection_method` String, `default_tax_rates` String, `total_tax_amounts` String, `hosted_invoice_url` String, `status_transitions` String, `customer_tax_exempt` String, `total_excluding_tax` Int64, `subscription_details` String, `webhooks_delivered_at` DateTime, `subtotal_excluding_tax` Int64, `total_discount_amounts` String, `pre_payment_credit_notes_amount` Int64, `post_payment_credit_notes_amount` Int64') AS posthog_test_stripe_invoice
           WHERE posthog_test_stripe_invoice.paid) AS invoice) AS revenue_analytics_revenue_item ON equals(revenue_analytics_customer.id, revenue_analytics_revenue_item.customer_id)
     WHERE notEmpty(group_key)
     GROUP BY group_key) AS groups_revenue_analytics
  ORDER BY groups_revenue_analytics.group_key ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
